Small fixes
- Sorted the list of cities so they appear in alphabetical order on the dropdown
- added scrollbar in dropdown

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -705,6 +705,8 @@ li.active a {
 
 #checkBoxes {
     display: none;
+    max-height: 200px;
+    overflow-y: scroll;
 }
 
 #checkBoxes label {
